# nlp_final

./: .gitignore  README.md  app.py  pyproject.toml
app/: Dockerfile  main.py  requirements.txt
app/static/: index.html  script.js  style.css
research_dev/: .gitignore  README.md  financial_sentiment_analysis.ipynb  fine_tune_model.ipynb  init_hg.ipynb  requirements.txt  update_refined.ipynb
